[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "welfaremap-data"
version = "0.1.0"
description = "WelfareMap AI facility data pipeline"
requires-python = ">=3.12"
dependencies = [
  "openpyxl>=3.1,<4",
  "pandas>=2.2,<3",
  "pyproj>=3.7,<4",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pandas-stubs>=2.2,<3",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
  "types-requests>=2.32,<3",
]

[tool.setuptools.packages.find]
include = ["welfaremap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
